--- a/notebooks/invitro.ipynb
+++ b/notebooks/invitro.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "09f49570-1c70-4d0b-9370-2c8f869facf9",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,6 @@
     "import os\n",
     "import pandas as pd\n",
     "from plotnine import *\n",
-    "from tqdm import tqdm\n",
     "import numpy as np\n",
     "import scipy\n",
     "import micom\n",
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ad0d35c7-d77b-4fea-8cfc-3a6359a0cf32",
    "metadata": {
     "tags": []
@@ -49,7 +48,7 @@
    "source": [
     "def build_all(taxa):\n",
     "    taxonomy = pd.DataFrame()\n",
-    "    for sample_id in tqdm(taxa.index):\n",
+    "    for sample_id in taxa.index:\n",
     "        sample = taxa.loc[sample_id] #find the row with abundances \n",
     "        sample = sample.index.to_list() #only want those taxa with abundance of 1% or more\n",
     "        names = \",\".join([sample_id[:2] for sample_id in sample]).split(',') #get taxa name\n",
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e8da0bc6-a8fa-48dc-bec3-8bec22607c30",
    "metadata": {},
    "outputs": [],
@@ -121,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0ba07a39-925c-43f4-8f7c-97f04971d82d",
    "metadata": {},
    "outputs": [],
@@ -134,8 +133,9 @@
     "main['Run'] = main['Sequencing Run'].str[-3:] # identify sequencing run \n",
     "main['sample_id'] = 'P'+main['Plate']+main['Row']+main['Column']+'_'+main['Run'] # create unique identifier for each sample\n",
     "main = main[main['Contamination?']=='No'] #no contaminants\n",
+    "main.drop_duplicates(subset = 'sample_id', inplace = True)\n",
     "main.set_index('sample_id',inplace = True) \n",
-    "main = main.loc[main.index.drop_duplicates(keep = 'last')] # drop duplicates"
+    "main"
    ]
   },
   {
@@ -151,130 +151,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5d8c8a48-d408-450f-94e0-6400d21d3e4d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>metabolite</th>\n",
-       "      <th>flux</th>\n",
-       "      <th>reaction</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4abz_m</td>\n",
-       "      <td>0.07300</td>\n",
-       "      <td>EX_4abz_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ade_m</td>\n",
-       "      <td>0.00006</td>\n",
-       "      <td>EX_ade_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ala_L_m</td>\n",
-       "      <td>5.30000</td>\n",
-       "      <td>EX_ala_L_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>arg_L_m</td>\n",
-       "      <td>22.00000</td>\n",
-       "      <td>EX_arg_L_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>asn_L_m</td>\n",
-       "      <td>2.60000</td>\n",
-       "      <td>EX_asn_L_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>arab_L_m</td>\n",
-       "      <td>21.00000</td>\n",
-       "      <td>EX_arab_L_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>64</th>\n",
-       "      <td>glc_D_m</td>\n",
-       "      <td>25.00000</td>\n",
-       "      <td>EX_glc_D_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>na1_m</td>\n",
-       "      <td>28.00000</td>\n",
-       "      <td>EX_na1_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>lac_L_m</td>\n",
-       "      <td>28.00000</td>\n",
-       "      <td>EX_lac_L_m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>malt_m</td>\n",
-       "      <td>4.00000</td>\n",
-       "      <td>EX_malt_m</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>68 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   metabolite      flux     reaction\n",
-       "0      4abz_m   0.07300    EX_4abz_m\n",
-       "1       ade_m   0.00006     EX_ade_m\n",
-       "2     ala_L_m   5.30000   EX_ala_L_m\n",
-       "3     arg_L_m  22.00000   EX_arg_L_m\n",
-       "4     asn_L_m   2.60000   EX_asn_L_m\n",
-       "..        ...       ...          ...\n",
-       "63   arab_L_m  21.00000  EX_arab_L_m\n",
-       "64    glc_D_m  25.00000   EX_glc_D_m\n",
-       "65      na1_m  28.00000     EX_na1_m\n",
-       "66    lac_L_m  28.00000   EX_lac_L_m\n",
-       "67     malt_m   4.00000    EX_malt_m\n",
-       "\n",
-       "[68 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "medium = pd.read_csv('../media/DM38.csv')\n",
     "medium"
@@ -293,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5c4b0891-0c5c-496f-a4c7-be320b40f7a0",
    "metadata": {},
    "outputs": [],
@@ -303,7 +183,8 @@
     "taxaLow = low[taxaLow].drop(columns = ['B.cereus Fraction'])\n",
     "taxaLow = taxaLow.round(4).dropna(how='all')\n",
     "odLow = low['OD'].to_dict() #collect dictionary of OD measures\n",
-    "measButLow = low['Butyrate'].to_dict() #collect dictionary of measured butyrate"
+    "measButLow = low['Butyrate'].to_dict() #collect dictionary of measured butyrate\n",
+    "taxaLow"
    ]
   },
   {
@@ -319,23 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2a978164-150c-4b9f-95c0-369275a5a5bd",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (2365269668.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn [7], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    out_folder='../models/invitro/low_richness,\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "taxonomy = build_all(taxaLow)\n",
     "manifestLow = micom.workflows.build(taxonomy, \n",
-    "                                    out_folder='../models/invitro/low_richness,\n",
+    "                                    out_folder='../models/invitro/low_richness',\n",
     "                                    model_db = '../agora/data', \n",
     "                                    cutoff=0.001,\n",
     "                                    threads=10)"
@@ -454,8 +326,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "manifestLow = pd.read_csv('../models/invitro/high_richness/manifest.csv')\n",
-    "growthLow = micom.workflows.grow(manifestLow,\n",
+    "manifestHigh = pd.read_csv('../models/invitro/high_richness/manifest.csv')\n",
+    "growthHigh = micom.workflows.grow(manifestLow,\n",
     "                              '../models/invitro/high_richness',\n",
     "                              medium,\n",
     "                              tradeoff = 0.7,\n",
@@ -508,13 +380,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "833c6182-e302-4179-bc66-902711a1859c",
+   "metadata": {},
+   "source": [
+    "## Plot Results\n",
+    "Plot the results of butyrate predictions in both contexts. (Fig 2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e276cb21-1b83-4b3c-889e-98652d9ec454",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotHigh = ( #plot scaled measured value vs predicted value for butyrate flux\n",
+    "plot = ( #plot scaled measured value vs predicted value for butyrate flux\n",
     "    ggplot(\n",
     "    butyrateTot, aes(x = 'measured',y = 'predicted'))\n",
     "    +geom_point(size = 3, color = \"cornflowerblue\")\n",
@@ -527,26 +408,8 @@
     "                                axis_line = element_line(size = 2, linetype = \"solid\",colour = \"black\"),\n",
     "                                legend_title=element_blank(),\n",
     "                                legend_position='right'))\n",
-    "plotHigh"
+    "plot"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d516a1c-9707-4958-9340-62fa1b7364fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ggsave(plotHigh, '/users/nbohmann/exvivo/fig2plt1.png', dpi = 300)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22968907-d8a5-4476-819e-25435e22b53c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
