--- a/notebooks/studyA.ipynb
+++ b/notebooks/studyA.ipynb
@@ -356,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('../data/studyA.csv')"
+    "res.to_csv('../results/studyA.csv')"
    ]
   }
  ],
