--- a/notebooks/studyB.ipynb
+++ b/notebooks/studyB.ipynb
@@ -382,7 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('../data/studyB.csv')"
+    "res.to_csv('../results/studyB.csv')"
    ]
   }
  ],
