--- a/notebooks/studyC.ipynb
+++ b/notebooks/studyC.ipynb
@@ -365,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('/proj/gibbons/scfa_predictions/results/studyC.csv')"
+    "res.to_csv('../results/studyC.csv')"
    ]
   }
  ],
